# AGCCS-CTRL22

./: .gitignore  Installation.md  README.md
arduino/: README.md
arduino/ctrl22ino/: Ctrl22Ino.md
arduino/ctrl22one/: README.md  ctrl22one.ino  mkcert.sh  mkheaders.sh  mkheaders_tmp
circuit/: README.md  agccs-ctrl22.kicad_pcb  agccs-ctrl22.kicad_pcb-bak  optiboot_atmega4808.hex
circuit/KiCad/: agccs-ctrl22-cache.lib  agccs-ctrl22-rescue.dcm  agccs-ctrl22-rescue.lib  agccs-ctrl22.dcm  agccs-ctrl22.kicad_pcb  agccs-ctrl22.lib  agccs-ctrl22.net  agccs-ctrl22.pro  agccs-ctrl22.sch  analog_section_low_voltage.sch  atmega4808_and_peripherals.sch  fp-info-cache  fp-lib-table  mains_and_power.sch  smartevse-import.lib  sym-lib-table
circuit/KiKad/: atmega4808_and_peripherals.sch-bak  fp-lib-table  sym-lib-table
circuit/Rev-1-2/: agccs-ctrl22-bom-mouser.csv  agccs-ctrl22-bom-mouser.tsv  analog_section_low_voltage.sch  atmega4808_and_peripherals.sch  mains_and_power.sch
circuit/Rev-1-x/: agccs-ctrl22-rescue.lib  (+5 more)
ctrl22/: README.md  ctrl22.c  makefile
ctrl22c/: README.md  ctrl22c.c  ctrl22c.hex  makefile
demesh/: CMakeLists.txt  NodeControl.md  README.md  lnport.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  usb-link
demesh/components/m5stickc/: CMakeLists.txt  m5stickc.c
demesh/components/m5stickc/include/: button.h  m5stickc.h  tftspi.h
demesh/components/m5stickc/util/: AXP192.c  button.c  tft.c  tftspi.c
demesh/components/m5stickc/util/include/: AXP192.h
monitor/: README.md
utils/: README.md  dmctrl.py  dmdash.py  upload.sh
(+45 files in other folders)
